--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,3 @@
 <a href="{{ site.baseurl }}/">Tutorials</a>
-<a href="{{ site.baseurl }}/faq">FAQ</a>
+<a href="{{ site.baseurl }}/faq">FAQs</a>
 <!-- <a href="{{ site.baseurl }}/contact/">Contact</a> -->
